# mkBatteryChecker

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: battery_monitor.c  battery_monitor.h  device_scanner.c  device_scanner.h  hid_util.c  hid_util.h  main.c  tray_app.c  tray_app.h
